--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
   <!-- Icons -->
-  <link rel="shortcut icon" href="/favicon.png">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
