use static favicon url.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,8 +21,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
   <!-- Icons -->
-  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png">
-
+  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="http://mwzhang.com/favicon.png">
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
 </head>
